vendor/fixed-macro/tests/compile-fail/overflow-01.rs
fn main() {
    fixed_macro::fixed!(7.99: I4F4);
}
